# rpi-stats-service

./: .env  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  diesel.toml
client/: Cargo.toml
client/src/: main.rs
collector/: Cargo.toml
collector/migrations/2018-08-30-213414_instance_create/: up.sql
collector/migrations/2018-08-30-220327_log_create/: up.sql
collector/src/: db.rs  main.rs  models.rs  schema.rs  session_manager.rs
collector/src/db/: pool.rs
collector/src/db/models/: instance.rs  log.rs  log_type.rs  mesh.rs  mod.rs  user.rs
collector/src/routes/: auth.rs  basic.rs  mod.rs
commons/: Cargo.toml
commons/src/: db.rs  lib.rs  models.rs  schema.rs
migrations/: 2018-09-13-232400.down.sql  2018-09-13-232400.up.sql
migrations/2018-08-30-213414_instance_create/: down.sql  up.sql
migrations/2018-08-30-220059_log_type_create/: down.sql  up.sql
migrations/2018-08-30-220327_log_create/: down.sql  up.sql
service/: .env  Cargo.toml
service/collector/: Cargo.toml  Rocket.toml
service/collector/src/: main.rs  session_manager.rs
service/collector/src/db/: mod.rs
service/collector/src/db/dmodels/: mod.rs  schema.rs
service/collector/src/db/lmodels/: instance.rs  log.rs  log_type.rs  logical_user.rs  mod.rs
service/collector/src/db/models/: instance.rs  log.rs  log_type.rs  mesh.rs  mesh_instance.rs  mod.rs  schema.rs  user.rs  user_mesh.rs
service/collector/src/error/: mod.rs
service/collector/src/routes/: auth.rs  instance.rs  log_type.rs  mesh.rs  mod.rs  user.rs
service/collector/src/session/: mod.rs  session.rs  session_manager.rs  token.rs
service/migrations/: 2018-09-13-232400.down.sql
service/migrations/2018-09-13-232400/: up.sql
service/migrations/2019-04-14-195141_init/: down.sql  up.sql
service/migrations/2019-04-14-211856_data/: up.sql
src/: main.rs
src/db/: mod.rs  sqlite3.rs  wrapper.rs
src/sources/: memory.rs  mod.rs  source.rs  temperature.rs
web/: Cargo.toml
web-ui/: .eslintrc  README.md  package.json  vue.config.js
web-ui/public/: index.html
web-ui/src/: main.js
web-ui/src/common/: User.js  close-on-escape.js
web-ui/src/common/model/: Model.js
web-ui/src/components/: ContainerView.vue  DeleteDialog.vue  GlobalSnack.vue  MessageBox.vue  TableBarsButton.vue  Toolbar.vue
web-ui/src/layout/: App.vue  Application.vue  Blank.vue  Layout.vue  Login.vue  sidebar.js
web-ui/src/pages/instances/: InstancesTableView.vue
web-ui/src/pages/profile/: Profile.vue
web-ui/src/plugins/: bus.js  common.js  global-snack.js  http.js  store.js  user.js  vuetify.js
web-ui/src/router/: router.js  routes.js
web-ui/src/store/: store.js
web-ui/src/store/modules/: ui.js  user.js
web-ui/src/stylus/: main.styl
web-ui/src/views/instances/: InstancesForm.vue  InstancesTable.vue
web-ui/src/views/log-types/: LogTypesForm.vue  LogTypesTable.vue
web-ui/src/views/meshes/: MeshesTable.vue
web-ui/src/views/profile/: Profile.vue
web/src/: main.rs
