[package]
name = "collector"
version = "0.0.1"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"] }
dotenv = "0.13.0"

serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"

rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = { version = "0.3.16", default-features = false, features = ["json"] }

r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

rust-crypto = "0.2.36"

commons = {path = "../commons"}
