[package]
name = "collector"
version = "0.0.1"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies]
dotenv = "0.13.0"

serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"

rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = { version = "0.3.17", default-features = false, features = ["json"] }

r2d2 = "0.8.2"
r2d2_sqlite = "0.6.0"
rusqlite = "0.14.0"

rust-crypto = "0.2.36"
