[package]
name = "commons"
version = "0.0.1"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"] }
dotenv = "0.13.0"

serde = "1.0.76"
serde_json = "1.0.26"
serde_derive = "1.0.76"

rocket = "0.3.16"
rocket_codegen = "0.3.16"

r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
