[package]
name = "collector"
version = "0.0.1"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
rand = "0.6.5"
failure = "0.1.5"

serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"

rocket = "0.4.1"
rocket_codegen = "0.4.1"
rocket_contrib = { version = "0.4.1", default-features = false, features = ["json", "diesel_postgres_pool"] }

diesel = { version = "1.4.2", features = ["postgres"] }

uuid = { version = "0.7.4", default-features = false, features = ["v4"] }
